crates/rudolint-rules/tests/snapshots/rule_fixtures__project_native_inline_suppressions.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 39
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 236,
      "end_column": 17,
      "end_line": 13,
      "start_byte": 220,
      "start_column": 1,
      "start_line": 13
    },
    "severity": "error"
  }
]
