crates/rudolint-rules/tests/snapshots/rule_fixtures__rdk1004_secret_mount_copied_to_layer_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1351
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDK1004",
    "help": null,
    "labels": [],
    "message": "secret mount contents appear to be copied into the image layer",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "RDK1004",
    "help": null,
    "labels": [],
    "message": "secret mount contents appear to be copied into the image layer",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 6,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  },
  {
    "code": "RDK1004",
    "help": null,
    "labels": [],
    "message": "secret mount contents appear to be copied into the image layer",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  }
]
