crates/rudolint-rules/tests/snapshots/rule_fixtures__rdk1005_ssh_mount_command_scope_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1367
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDK1005",
    "help": null,
    "labels": [],
    "message": "SSH mount is available to more than one RUN command scope",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "RDK1005",
    "help": null,
    "labels": [],
    "message": "SSH mount is available to more than one RUN command scope",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 6,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  },
  {
    "code": "RDK1005",
    "help": null,
    "labels": [],
    "message": "SSH mount is available to more than one RUN command scope",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  }
]
