crates/rudolint-rules/tests/snapshots/rule_fixtures__rdk1006_cache_mount_stable_id_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1383
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDK1006",
    "help": null,
    "labels": [],
    "message": "cache mount in multi-stage build should declare a stable id",
    "path": "",
    "primary_span": {
      "end_byte": 120,
      "end_column": 64,
      "end_line": 4,
      "start_byte": 57,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "info"
  },
  {
    "code": "RDK1006",
    "help": null,
    "labels": [],
    "message": "cache mount in multi-stage build should declare a stable id",
    "path": "",
    "primary_span": {
      "end_byte": 278,
      "end_column": 67,
      "end_line": 8,
      "start_byte": 212,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "info"
  }
]
