crates/rudolint-rules/tests/snapshots/rule_fixtures__rdk1007_cache_mount_safe_sharing_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1399
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDK1007",
    "help": null,
    "labels": [],
    "message": "cache mount for lock-based package manager should use sharing=locked",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "RDK1007",
    "help": null,
    "labels": [],
    "message": "cache mount for lock-based package manager should use sharing=locked",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 6,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  }
]
