crates/rudolint-rules/tests/snapshots/rule_fixtures__rdk1008_entitlement_opt_in_config_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1438
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[]
