crates/rudolint-rules/tests/snapshots/rule_fixtures__rdk1008_entitlement_opt_in_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1415
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDK1008",
    "help": null,
    "labels": [],
    "message": "BuildKit entitlement network.host requires allow-entitlements opt-in",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "RDK1008",
    "help": null,
    "labels": [],
    "message": "BuildKit entitlement security.insecure requires allow-entitlements opt-in",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 6,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  },
  {
    "code": "RDK1008",
    "help": null,
    "labels": [],
    "message": "BuildKit entitlement network.host requires allow-entitlements opt-in",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  },
  {
    "code": "RDK1008",
    "help": null,
    "labels": [],
    "message": "BuildKit entitlement security.insecure requires allow-entitlements opt-in",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  }
]
