crates/rudolint-rules/tests/snapshots/rule_fixtures__rdk1009_multi_platform_host_architecture_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1454
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDK1009",
    "help": null,
    "labels": [],
    "message": "multi-platform build should use target platform variables instead of host architecture",
    "path": "",
    "primary_span": {
      "end_byte": 433,
      "end_column": 85,
      "end_line": 14,
      "start_byte": 349,
      "start_column": 1,
      "start_line": 14
    },
    "severity": "warning"
  },
  {
    "code": "RDK1009",
    "help": null,
    "labels": [],
    "message": "multi-platform build should use target platform variables instead of host architecture",
    "path": "",
    "primary_span": {
      "end_byte": 460,
      "end_column": 27,
      "end_line": 15,
      "start_byte": 434,
      "start_column": 1,
      "start_line": 15
    },
    "severity": "warning"
  },
  {
    "code": "RDK1009",
    "help": null,
    "labels": [],
    "message": "multi-platform build should use target platform variables instead of host architecture",
    "path": "",
    "primary_span": {
      "end_byte": 703,
      "end_column": 39,
      "end_line": 21,
      "start_byte": 665,
      "start_column": 1,
      "start_line": 21
    },
    "severity": "warning"
  }
]
