crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl1001_legacy_suppression_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL1001",
    "help": null,
    "labels": [],
    "message": "prefer native rudolint suppression comments over legacy external suppressions",
    "path": "",
    "primary_span": {
      "end_byte": 24,
      "end_column": 25,
      "end_line": 1,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 1
    },
    "severity": "warning"
  },
  {
    "code": "RDL1001",
    "help": null,
    "labels": [],
    "message": "prefer native rudolint suppression comments over legacy external suppressions",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 8,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "warning"
  }
]
